--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jest": "^29.2.1",
     "jest-html-reporter": "^3.7.0",
+    "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.9.3",
     "mongoose": "^6.6.5",
     "nanoid": "^3.0.0",
